2003-12-17	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* psxtests.am: Use $(mkdir_p) instead of $(mkinstalldirs).

2003-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Require automake >= 1.8, autoconf >= 2.59.

2003-12-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* psxcancel/Makefile.am: Remove used H_FILES.

2003-12-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/Makefile.am: Reformat.
	* psx01/Makefile.am: Remove all-local: $(ARCH).
	* psx02/Makefile.am: Remove all-local: $(ARCH).
	* psx03/Makefile.am: Remove all-local: $(ARCH).
	* psx04/Makefile.am: Remove all-local: $(ARCH).
	* psx05/Makefile.am: Remove all-local: $(ARCH).
	* psx06/Makefile.am: Remove all-local: $(ARCH).
	* psx07/Makefile.am: Remove all-local: $(ARCH).
	* psx08/Makefile.am: Remove all-local: $(ARCH).
	* psx09/Makefile.am: Remove all-local: $(ARCH).
	* psx10/Makefile.am: Remove all-local: $(ARCH).
	* psx11/Makefile.am: Remove all-local: $(ARCH).
	* psx12/Makefile.am: Remove all-local: $(ARCH).
	* psx13/Makefile.am: Remove all-local: $(ARCH).
	* psxcancel/Makefile.am: Remove all-local: $(ARCH).
	* psxchroot01/Makefile.am: Remove all-local: $(ARCH).
	* psxfile01/Makefile.am: Remove all-local: $(ARCH).
	* psxhdrs/Makefile.am: Remove all-local: $(ARCH).
	* psxmount/Makefile.am: Remove all-local: $(ARCH).
	* psxmsgq01/Makefile.am: Remove all-local: $(ARCH).
	* psxreaddir/Makefile.am: Remove all-local: $(ARCH).
	* psxsem01/Makefile.am: Remove all-local: $(ARCH).
	* psxstat/Makefile.am: Remove all-local: $(ARCH).
	* psxtime/Makefile.am: Remove all-local: $(ARCH).
	* psxtimer/Makefile.am: Remove all-local: $(ARCH).

2003-11-10	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Reflect having moved to testsuites/.

2003-10-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_CANONICAL_HOST.

2003-10-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:Remove RTEMS_CHECK_CPU.

2003-09-15	Jennifer Averett <jennifer@OARcorp.com>
