@@ -1,3 +1,7 @@
+2003-12-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* psxtests.am: Add dirstamp support.
+
 2003-12-17	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* psxtests.am: Use $(mkdir_p) instead of $(mkinstalldirs).
